Update metada and list of programs.
FossilOrigin-Name: 73c43988c27eb9656da1bf888fdb73e81a21676f4bb40183ca8356e930b69814

--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,16 +1,19 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.2.0-dev.5+20200224
-:version-label_: Version de ti-ci edition digital
-:version-label: {version-label_}:
+:revnumber: 0.2.0-dev.6+20201104
+:doctype: book
 :lang: ie
 :docinfo: private
-ifdef::backend-pdf[]
-:doctype: book
-:toc: macro
-:toclevels: 3
+:version-label_: Version de ti edition digital
+:version-label: {version-label_}:
 :toc-title: Contenete
-:front-cover-image: ../tmp/book_cover.pdf
+ifdef::backend-epub3[]
+:front-cover-image: ../target/krasina_cover.jpg
+endif::[]
+ifdef::backend-pdf[]
+:toc:
+:toclevels: 3
+:front-cover-image: ../tmp/krasina_cover.jpg.pdf
 endif::[]
 
 // This file is part of project
@@ -22,7 +25,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202002242202
+// Last modified 202011040019
 
 :dot: .
 
@@ -56,17 +59,15 @@ Changes in ti edition::
 
 {version-label_}:: {revnumber}.
 
-Libre digital fat solmen per líber programas::
+Programmas (omnis líber) usat por ti librification digital::
 http://asciidoctor.org[Asciidoctor],
-https://github.com/asciidoctor/asciidoctor-pdf[asciidoctor-pdf],
+https://github.com/asciidoctor/asciidoctor-epub3[Asciidoctor EPUB3],
+https://github.com/asciidoctor/asciidoctor-pdf[Asciidoctor PDF],
 http://docbook.sourceforge.net/release/xsl/current/epub/README[dbtoepub],
 http://debian.org[Debian],
-http://git-scm.com/[Git],
-https://www.gnu.org/software/make/[GNU make],
 http://imagemagick.org[ImageMagick],
 https://gitlab.mister-muffin.de/josch/img2pdf[img2pdf],
 http://pandoc.org[Pandoc],
-http://http://jonas.nitro.dk/tig[Tig],
 http://vim.org[Vim],
 http://xmlsoft.org/XSLT/[xsltproc]...
 
